--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,24 @@
     <script src="https://cdn.web3forms.com/v3/web3forms.js" async defer></script>
 </head>
 <body>
+    <div class="modalContainer">
+        <div class="modal">
+            <div class="closeM">
+                <i class="fa-solid fa-xmark"></i>
+            </div>
+           <div class="menuModal">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="howItWork.html">How it works</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="#" class="connexion">Se connecter</a></li>
+                </ul>
+            </nav>
+           </div>
+        </div>
+    </div>
     <section class="contact">
         <div class="kab">
             <div class="navBar"></div>
