--- a/howItWork.html
+++ b/howItWork.html
@@ -13,6 +13,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <div class="modalContainer">
+        <div class="modal">
+            <div class="closeM">
+                <i class="fa-solid fa-xmark"></i>
+            </div>
+           <div class="menuModal">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="howItWork.html">How it works</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="#" class="connexion">Se connecter</a></li>
+                </ul>
+            </nav>
+           </div>
+        </div>
+    </div>
     <section class="howItworksHeader">
         <div class="navBar"></div>
         <div class="howItworksHeaderDescription">
