--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                     <li><a href="howItWork.html">How it works</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="#" class="connexion">Se connecter</a></li>
+                    <li><a href="#">Se connecter</a></li>
                 </ul>
             </nav>
            </div>
