--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" defer></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     <script src="app.js" defer type="text/babel"></script>
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-5MP32HWJ');</script>
+        <!-- End Google Tag Manager -->
 </head>
 <body>
     <div class="modalContainer">
